test/good/arrays/covariance01.px

class A def
    Int x: 1

class B(A) def
    Int x: 2

a = [A()]
a = [B()]
print a[0].x
