test/bad/classes/print06.px

class A def
    Int x

print [A()]
